creation of notification service